# libhangish

./: CMakeLists.txt  HangishConfig.cmake.in  README.md  authenticator.cpp  authenticator.h  channel.cpp  channel.h  hangishclient.cpp  hangishclient.cpp.orig  hangishclient.h  hangouts.proto  libhangish.pro  protobuf.pri  qtimports.h  types.h  utils.cpp  utils.h
